[BACKPORT 2026.1][PLAT-20413][OTEL]Add a GET API to fetch the current configured exports for a universe
Summary:
Add a GET API that returns all the exports configured in a particular universe

Original commit: 62661ac17b1a4a35ed3c4c180df24a3d3325f26f / D53763

Test Plan:
`GET http://localhost:9000/api/v2/customers/<>/universes/<>/export-telemetry-configs`
```
{
    "query_logs": {
        "ysql_query_log_config": {
            "enabled": true,
            "log_statement": "NONE",
            "log_min_error_statement": "ERROR",
            "log_error_verbosity": "DEFAULT",
            "log_duration": false,
            "debug_print_plan": false,
            "log_connections": false,
            "log_disconnections": false,
            "log_min_duration_statement": -1,
            "log_line_prefix": "querylogexport"
        },
        "exporters": [
            {
                "exporter_uuid": "a1cf11bd-7443-4e96-9b28-94e820475eef",
                "additional_tags": {
                    "universe1": "dkumar-cli-test",
                    "testing": "tags"
                },
                "send_batch_max_size": 1000,
                "send_batch_size": 100,
                "send_batch_timeout_seconds": 10,
                "memory_limit_mib": 2048,
                "memory_limit_check_interval_seconds": 10
            }
        ]
    },
    "metrics": {
        "scrape_interval_seconds": 30,
        "scrape_timeout_seconds": 20,
        "collection_level": "NORMAL",
        "scrape_config_targets": [
            "YSQL_EXPORT",
            "CQL_EXPORT",
            "NODE_EXPORT",
            "NODE_AGENT_EXPORT",
            "MASTER_EXPORT",
            "OTEL_EXPORT",
            "TSERVER_EXPORT"
        ],
        "exporters": [
            {
                "exporter_uuid": "a1cf11bd-7443-4e96-9b28-94e820475eef",
                "additional_tags": {},
                "send_batch_max_size": 1000,
                "send_batch_size": 100,
                "send_batch_tim
